--- a/posts/2020-11-18.md
+++ b/posts/2020-11-18.md
@@ -2,12 +2,28 @@
 
 Materialize allows you to maintain declarative, relational SQL queries over continually changing data.
 One of the most powerful features of SQL queries are *joins*: the ability to correlate records from multiple collections of data.
-Joins also happen to be one of the harder things to do both correctly and efficiently as data change.
+Joins also happen to be one of the harder things to do both correctly and efficiently as the underlying data change.
 
 Let's walk through the ways that Materialize maintains queries containing joins!
 
-In particular, we'll see increasingly sophisticated join planning techniques, starting from what a conventional dataflow system might do, and moving up through joins that can introduce nearly zero per-query overhead.
+In particular, we'll see increasingly sophisticated join planning techniques, starting from what a conventional dataflow system might do, and moving through joins that can introduce nearly zero per-query overhead.
 Each of the new join plans we work through represent an implementation strategy that Materialize can do that other dataflow systems will struggle to replicate.
+
+As we move through techniques, the number of records maintained by each query dataflows drops:
+
+|   query 03 |  query 08 | technique |
+| ----------:|----------:|---------- |
+|  4,173,794 | 7,111,507 | [Baseline implementation](#Joins-in-Materialize:-A-first-implementation) |
+|  3,416,347 | 6,142,311 | [Primary indexes](#Joins-in-Materialize:-Primary-Indexes) |
+|    174,571 |   141,228 | [Secondary indexes](Joins-in-Materialize:-Secondary-Indexes) |
+|     23,240 |         6 | [Delta queries](#Joins-in-Materialize:-Delta-Queries) |
+
+Each of these techniques are live in [Materialize](https://materialize.com/download) now.
+Each comes on-line in response to indexes that you ask Materialize to prepare.
+The more prepared indexes, the less per-query memory required (admittedly, the more baseline memory required as well).
+
+At the end, we'll have a forward-looking [discussion of late-materialization](#Joins-in-Materialize:-Late-Materialization) which can further reduce the memory requirements, in a way that currently requires user assistance (we're working on it!).
+Throughout, the story is that Materialize can invoke efficient join patterns from relational databases in the context of scale-out dataflow processors.
 
 ## Introducing Joins
 
@@ -39,8 +55,8 @@ The `join` operator receives this information, and must correctly respond to it 
 For example, if we add a record to `customer`, the output must be updated to include any matches between that record and `location`;
 this probably means a new output record with the customer name and the state corresponding to its ZIP code.
 
-Most dataflow systems implement the `join` operator by maintaining its two inputs each in an index.
-As changes arrive for either input, we can look at their `zip` field and immediately leap to the matching recrods in the *other* collection.
+Most dataflow systems implement the `join` operator by having it maintain its two inputs each in an index.
+As changes arrive for either input, the operator can look at their `zip` fields and immediately leap to the matching records in the *other* collection.
 This allows the operator to quickly respond to record additions, deletions, or changes with the corresponding output addition, deletion, or change.
 
 The operator maintains state proportional to the current records in each of its inputs.
@@ -56,7 +72,7 @@ Materialize plans joins using a slightly different dataflow plan:
 
 We have broken the traditional `join` operator into three parts.
 Each of the inputs first visits an `arrange` operator, whose results then go to a `join_core` operator.
-The `arrange` operators are in charge of building and maintaining the indexed representations of their inputs.
+The `arrange` operators are in charge of *building and maintaining* the indexed representations of their inputs.
 The `join_core` operator takes two pre-indexed, maintained collections and applies the join *logic* to the changes that move through them.
 
 Why break apart the `join` operator into `arrange` and `join_core`?
@@ -80,7 +96,7 @@ We would still need a private copy of `customer` indexed by `zip`, but as we wil
 ## Joins in Materialize: TPC-H examples
 
 Let's work through a query from the TPC-H data warehousing benchmark.
-Query 03 is design to match the following description:
+Query 03 is designed to match the following description:
 
 > The Shipping Priority Query retrieves the shipping priority and potential revenue, defined as the sum of l_extendedprice * (1-l_discount), of the orders having the largest revenue among those that had not been shipped as of a given date.
 > Orders are listed in decreasing order of revenue.
@@ -116,33 +132,7 @@ ORDER BY
 The absence of `LIMIT 10` from the query is just how TPC-H defines things.
 In the interest of clarity we are going to work on the core of the query, without the `ORDER BY` or elided `LIMIT`.
 The query is a three-way join between `customer`, `orders`, and `lineitem`, followed by a reduction.
-The reduction keys seem to be three random fields, but notice that `l_orderkey = o_orderkey`, where `o_orderkey` is a primary key for `orders`.
-
-Let's rewrite the query that we'll go after, again for clarity more than anything:
-
-```sql
-SELECT
-    o_orderkey,
-    o_orderdate,
-    o_shippriority,
-    sum(l_extendedprice * (1 - l_discount)) AS revenue
-FROM
-    customer,
-    orders,
-    lineitem
-WHERE
-    c_mktsegment = 'BUILDING'
-    AND c_custkey = o_custkey
-    AND l_orderkey = o_orderkey
-    AND o_orderdate < DATE '1995-03-15'
-    AND l_shipdate > DATE '1995-03-15'
-GROUP BY
-    o_orderkey,
-    o_orderdate,
-    o_shippriority;
-```
-
-To my eyes, this makes the intent of the query a bit clearer.
+The reduction keys seem to be three random fields, but notice that `l_orderkey = o_orderkey`, where `o_orderkey` is a primary key for `orders`; we are producing an aggregate for each order.
 
 We'll be using the scale-factor 1 dataset, as it what I have locally and it is good enough to call out some of the trade-offs.
 You can mentally multiple the numbers we'll see by various powers of ten, and the same conclusions will hold.
@@ -156,7 +146,7 @@ We can do this with no other preparation (other than creating the `customer`, `o
 ```
 materialize=> CREATE MATERIALIZED VIEW query_03 AS
 materialize-> SELECT
-materialize->     o_orderkey,
+materialize->     l_orderkey,
 materialize->     o_orderdate,
 materialize->     o_shippriority,
 materialize->     sum(l_extendedprice * (1 - l_discount)) AS revenue
@@ -171,7 +161,7 @@ materialize->     AND l_orderkey = o_orderkey
 materialize->     AND o_orderdate < DATE '1995-03-15'
 materialize->     AND l_shipdate > DATE '1995-03-15'
 materialize-> GROUP BY
-materialize->     o_orderkey,
+materialize->     l_orderkey,
 materialize->     o_orderdate,
 materialize->     o_shippriority;
 ```
@@ -259,6 +249,9 @@ The new dataflow graph will looks like so
 
 ![Dataflow graph for join in Materialize with sharing](https://github.com/frankmcsherry/blog/blob/master/assets/joins/tpch1.png)
 
+Notice that some of the places where we had "state" before are now dotted.
+This indicates that they are not *new* state; the state is simply re-used from pre-existing arrangements.
+
 If we re-run our diagnostic query, the one that counts the records maintained by dataflow, we see
 
 ```
@@ -276,9 +269,9 @@ If we re-run our diagnostic query, the one that counts the records maintained by
 
 There are a few things to notice here.
 First, there are a lot more entries.
-Each of the indexes we constructed are back by dataflows, and they each maintain as many records as their collection contains.
+Each of the indexes we constructed are backed by dataflows, and they each maintain as many records as their collection contains.
 Second, the number of records for `query_03` has decreased.
-It has not vanished, and we will explain what records it still maintains, but it is on its wait to maintaining fewer records.
+It has not vanished, and we will explain what records it still maintains, but it is on its way to maintaining fewer records.
 Third, the numbers for the other indexes are non-trivial.
 This has not been a net reduction, if we only needed to maintain `query_03`.
 However, the conceit is that for multiple queries, the primary indexes are a fixed cost and the per-dataflow reductions apply to each new query.
@@ -299,7 +292,7 @@ Let's try that now.
 materialize=> CREATE INDEX fk_lineitem_orderkey ON lineitem (l_orderkey);
 ```
 
-Rebuildirg the query results in a dataflow that looks like so
+Rebuilding the query results in a dataflow that looks like so
 
 ![Dataflow graph for join in Materialize with sharing](https://github.com/frankmcsherry/blog/blob/master/assets/joins/tpch2.png)
 
@@ -488,12 +481,38 @@ GROUP BY
 What happens now in join planning is that "delta query" planning still kicks in.
 We have all of the necessary arrangements at hand to avoid maintaining intermediate state.
 The difference is that we only ever use one arrangement for each of the "wide" relations.
-The relations that must be multiply arranged are narrow relations who's rows can be substanially smaller.
+The relations that must be multiply arranged are narrow relations whose rows can be substanially smaller.
 
 ## Conclusions
+
+Scanning across the 22 TPC-H queries, the numbers of records each query needs to maintain drops dramatically:
+
+|    query | baseline   | primary indexes | delta queries |
+|----------|-----------:|-----------:|-----------:|
+| query 01 |         20 |         28 |         20 |
+| query 02 |  1,945,889 |  1,627,695 |     13,211 |
+| query 03 |  4,173,794 |  3,416,347 |     23,240 |
+| query 04 |  1,652,095 |  1,652,085 |    276,720 |
+| query 05 |  6,649,137 |  7,904,753 |    270,298 |
+| query 06 |         17 |         19 |         17 |
+| query 07 |  8,795,391 |  9,142,274 |         20 |
+| query 08 |  7,111,423 |  6,142,167 |         10 |
+| query 09 | 20,654,170 | 12,961,400 |        618 |
+| query 10 |  2,006,948 |  1,822,541 |    113,923 |
+| query 11 |    901,461 |  3,290,505 |     91,001 |
+| query 12 |  1,530,007 |     30,007 |          8 |
+| query 13 |  2,634,067 |  2,484,075 |  1,000,153 |
+| query 14 |    276,001 |     75,977 |         19 |
+| query 15 |    243,035 |    229,289 |    204,997 |
+| query 16 |  1,261,091 |  1,231,460 |    431,640 |
+| query 17 |  9,040,911 |  9,040,728 |      5,655 |
+| query 18 | 30,718,530 | 29,068,530 | 11,767,218 |
+| query 19 |    414,011 |    214,011 |         17 |
+| query 20 |        DNF |        DNF |        DNF |
+| query 21 | 15,367,567 | 20,091,971 |    884,845 |
+| query 22 |    279,478 |    230,658 |    158,636 |
 
 Joins are a pretty interesting beast in Materialize.
 
 Our use of shared arrangements means gives us access to efficient join plans that conventional dataflow systems cannot support.
 These join plans can **substantially** reduce the per-query resource requirements for relational queries.
-
