--- a/posts/2020-11-18.md
+++ b/posts/2020-11-18.md
@@ -190,7 +190,7 @@ We can read out these volumes from `materialize`'s logging views.
 To read out the total records maintained by each dataflow, we would type
 
 ```sql
---
+-- dataflow and number of records it is sitting on.
 SELECT id, name, sum(records)
 FROM mz_records_per_dataflow
 GROUP BY id, name
@@ -240,7 +240,7 @@ materialize=> CREATE INDEX pk_supplier ON supplier (s_suppkey);
 ```
 
 These indexes have names, though we do not need to use them explicitly.
-Rather, the columns identified at teh end of ecah line indicate which columns are used as keys for the index.
+Rather, the columns identified at the end of each line indicate which columns are used as keys for the index.
 In this case, they are all primary keys.
 
 We can rebuild our dataflow for `query_03` with these indexes in place.
@@ -279,7 +279,7 @@ However, the conceit is that for multiple queries, the primary indexes are a fix
 How do we explain the reduction for `query_03`?
 Why was the reduction as much as it was, and why was it not more substantial?
 If we examine the query, we can see that the equality constraints are on `o_orderkey` and `c_custkey`, which are primary keys for `orders` and `customer` respectively.
-However, we do not use `(l_orderkey, l_linenumber)` which are the primary keys for `lineitem`.
+However, we do not use `(l_orderkey, l_linenumber)` which is the primary key for `lineitem`.
 This means while we can re-use pre-arranged data for `orders` and `customer`, we cannot re-use the pre-arranged data for `lineitem`.
 That relation happens to be the large one, and so we still eat the cost of maintaining much of that relation (again, with a filter applied to it).
 
@@ -329,7 +329,7 @@ This could be big or small, and fortunately in this case it is not exceedingly l
 However, maintaining these intermediate results gets increasingly painful with multi-way joins that involve more relations.
 TPC-H query 08 contains an eight-way join, and would have seven intermediate results to maintain.
 There is no reason to believe that these intermediate results would be substantially smaller than the inputs.
-Moreover, the intemediate results are almost certainly specific to the query; we wouldn't expect they would be re-use across queries.
+Moreover, the intermediate results are almost certainly specific to the query; we wouldn't expect they could be re-used across queries.
 
 Fortunately, there is a neat trick to get around the pesky intermediate results.
 
@@ -386,29 +386,17 @@ It turns out this is the bare minimum `materialize` can make it, based on how we
 So, despite all that worry about intermediate results, with enough indexes we are somehow able to avoid the cost at all.
 What happened?
 
-If we check out `explain plan for SELECT ..` with these indexes in place, we can see a new type of join implementation:
-
-```
-<SNIP>
-
- | Join %0 %1 %2 (= #8 #17) (= #0 #9)
- | | implementation = DeltaQuery
- | |   delta %0 %1.(#1) %2.(#0)
- | |   delta %1 %0.(#0) %2.(#0)
- | |   delta %2 %1.(#0) %0.(#0)
-
-<SNIP>
-```
-
 Materialize has access to a join execution strategy we call `DeltaQuery` that aggressively re-uses arrangements and maintains *zero* intermediate results.
 This plan uses a quadratic number of arrangements, with respect to the number of input arrangements.
 This would be terrible for a conventional dataflow system that cannot share arranged data.
 For Materialize, as long as there are few enough *distinct* arrangements, the cost can be much lower.
 Materialize considers this plan only if all the necessary arrangement already exist, in which case the *additional* cost of the join is zero.
 
+The dataflow for this plan may be mysterious (the `lookup` operator goes unexplained for today) but you can see that all arrangements are now dotted:
+
 ![Dataflow graph for join in Materialize with sharing](https://github.com/frankmcsherry/blog/blob/master/assets/joins/tpch3.png)
 
-You might reasonably be hesitant about the outlay of arranged data required to enable delta queries.
+You might reasonably be hesitant about the outlay of pre-arranged data required to enable delta queries.
 We now have five copies of `lineitem` to maintain, and it is not the smallest collection of data.
 However, the per-query cost is now substantially reduced, and a quite-large number of analysts can each work with a quite large number of queries without exhausting `materialize`.
 
@@ -419,11 +407,11 @@ For some recently landing bonus content, let's talk about how expensive the five
 Each of these arrangements replicates the full contents of `lineitem`.
 That is clearly a lot of data, and a lot of redundancy.
 In a conventional dataflow system this overhead is expected; the `join` operator needs to keep whatever state it needs.
-But what happens in a relational database?
+But what happens in a more traditional relational database?
 
 Indexes in a relational database don't often replicate the entire collection of data.
 Rather, they often maintain just a mapping from the indexed columns back to a primary key.
-These few columns can take substantially less space than the whole collection, and may change less as various unrelated attributes are updated.
+These few columns can take substantially less space than the whole collection, and may also change less as various unrelated attributes are updated.
 
 Can we do the same thing in Materialize? Yes!
 
@@ -483,11 +471,14 @@ We have all of the necessary arrangements at hand to avoid maintaining intermedi
 The difference is that we only ever use one arrangement for each of the "wide" relations.
 The relations that must be multiply arranged are narrow relations whose rows can be substanially smaller.
 
+We've still got some work to do on this pattern, in particular automating it so that you needn't rewrite your query.
+However, I hope it has hinted at the ways in which Materialize can adapt efficient idioms from traditional databases to the data-parallel streaming setting.
+
 ## Conclusions
 
-Scanning across the 22 TPC-H queries, the numbers of records each query needs to maintain drops dramatically:
+Scanning across the 22 TPC-H queries, the numbers of records each query needs to maintain drops dramatically as we introduce indexes:
 
-|    query | baseline   | primary indexes | delta queries |
+|    query | baseline   | primary indexes | all secondary indexes |
 |----------|-----------:|-----------:|-----------:|
 | query 01 |         20 |         28 |         20 |
 | query 02 |  1,945,889 |  1,627,695 |     13,211 |
@@ -516,3 +507,5 @@ Joins are a pretty interesting beast in Materialize.
 
 Our use of shared arrangements means gives us access to efficient join plans that conventional dataflow systems cannot support.
 These join plans can **substantially** reduce the per-query resource requirements for relational queries.
+
+If you have an interesting collection of relational data which needs joining, [check out Materialize](https://materialize.com/download) now!
