--- a/posts/2020-11-18.md
+++ b/posts/2020-11-18.md
@@ -9,14 +9,15 @@ Let's walk through the ways that Materialize maintains queries containing joins!
 In particular, we'll see increasingly sophisticated join planning techniques, starting from what a conventional dataflow system might do, and moving through joins that can introduce nearly zero per-query overhead.
 Each of the new join plans we work through represent an implementation strategy that Materialize can do that other dataflow systems will struggle to replicate.
 
-As we move through techniques, the number of records maintained by each query dataflows drops:
+As we move through techniques, the number of records maintained by each query dataflows drops.
+Here are some numbers of maintained records for representative queries from TPC-H, as we move through techniques we will cover.
 
 |   query 03 |  query 08 | technique |
 | ----------:|----------:|---------- |
-|  4,173,794 | 7,111,507 | [Baseline implementation](#Joins-in-Materialize:-A-first-implementation) |
-|  3,416,347 | 6,142,311 | [Primary indexes](#Joins-in-Materialize:-Primary-Indexes) |
-|    174,571 |   141,228 | [Secondary indexes](Joins-in-Materialize:-Secondary-Indexes) |
-|     23,240 |         6 | [Delta queries](#Joins-in-Materialize:-Delta-Queries) |
+|  4,173,794 | 7,111,507 | [Baseline implementation](#joins-in-materialize-a-first-implementation) |
+|  3,416,347 | 6,142,311 | [Primary indexes](#joins-in-materialize-primary-indexes) |
+|    174,571 |   141,228 | [Secondary indexes](joins-in-materialize-secondary-indexes) |
+|     23,240 |         6 | [Delta queries](#joins-in-materialize-delta-queries) |
 
 Each of these techniques are live in [Materialize](https://materialize.com/download) now.
 Each comes on-line in response to indexes that you ask Materialize to prepare.
@@ -87,7 +88,7 @@ The standard dataflow system will build *private* indexes of `customer` and `loc
 The `zip` field in `location` may be a primary key, meaning each record has a different value of the field.
 Joins using primary keys are effectively "look-ups" and are quite common.
 Each such look-up would be a join using `location.zip` and would require the same index.
-We can bulid the index once, and re-use it across all of the query dataflows that need it.
+We can build the index once, and re-use it across all of the query dataflows that need it.
 
 ![Dataflow graph for join in Materialize with sharing](https://github.com/frankmcsherry/blog/blob/master/assets/joins/figure2.png)
 
@@ -135,7 +136,7 @@ The query is a three-way join between `customer`, `orders`, and `lineitem`, foll
 The reduction keys seem to be three random fields, but notice that `l_orderkey = o_orderkey`, where `o_orderkey` is a primary key for `orders`; we are producing an aggregate for each order.
 
 We'll be using the scale-factor 1 dataset, as it what I have locally and it is good enough to call out some of the trade-offs.
-You can mentally multiple the numbers we'll see by various powers of ten, and the same conclusions will hold.
+You can mentally multiply the numbers we'll see by various powers of ten, and the same conclusions will hold.
 
 ### Joins in Materialize: A first implementation
 
@@ -143,7 +144,7 @@ We can turn on `materialize` and frame the query above, using the `CREATE MATERI
 This instructs `materialize` to spin up a dataflow to read and maintain the results of the query.
 We can do this with no other preparation (other than creating the `customer`, `orders`, and `lineitem` data sources).
 
-```
+```text
 materialize=> CREATE MATERIALIZED VIEW query_03 AS
 materialize-> SELECT
 materialize->     l_orderkey,
@@ -169,7 +170,7 @@ materialize->     o_shippriority;
 At this point, we should have efficient random access to the results.
 There are many results, so let's just count them instead.
 
-```
+```text
 materialize=> select count(*) from query_03;
  count
 -------
@@ -199,7 +200,7 @@ ORDER BY sum(records) desc;
 
 When we do, we see (truncated):
 
-```
+```text
       id  |                         name                          |   sum
     ------+-------------------------------------------------------+---------
 -->   490 | Dataflow: materialize.public.query_03_primary_idx     | 4173794
@@ -228,7 +229,7 @@ This means we may not have to maintain as much per-dataflow state.
 Let's build indexes on the primary keys for each collection.
 We do this with Materialize's `CREATE INDEX` command.
 
-```
+```text
 materialize=> CREATE INDEX pk_lineitem ON lineitem (l_orderkey, l_linenumber);
 materialize=> CREATE INDEX pk_customer ON customer (c_custkey);
 materialize=> CREATE INDEX pk_nation ON nation (n_nationkey);
@@ -254,7 +255,7 @@ This indicates that they are not *new* state; the state is simply re-used from p
 
 If we re-run our diagnostic query, the one that counts the records maintained by dataflow, we see
 
-```
+```text
       id  |                         name                          |   sum
     ------+-------------------------------------------------------+---------
      1284 | Dataflow: materialize.public.pk_lineitem              | 6001215
@@ -288,7 +289,7 @@ That relation happens to be the large one, and so we still eat the cost of maint
 If we had an arrangement of `lineitem` by `l_orderkey`, we should be able to use it, and further reduce the memory requirements.
 Let's try that now.
 
-```
+```text
 materialize=> CREATE INDEX fk_lineitem_orderkey ON lineitem (l_orderkey);
 ```
 
@@ -298,7 +299,7 @@ Rebuilding the query results in a dataflow that looks like so
 
 If we re-pull the statistics on records maintained, we see
 
-```
+```text
      id  |                         name                          |   sum
     -----+-------------------------------------------------------+---------
      490 | Dataflow: materialize.public.pk_lineitem              | 6001215
@@ -310,7 +311,7 @@ If we re-pull the statistics on records maintained, we see
      529 | Dataflow: materialize.public.pk_customer              |  150000
      763 | Dataflow: materialize.public.pk_supplier              |   10000
      ...
- ```
+```
 
 The `query_03` dataflow is now substantially smaller.
 We've been able to re-use the `fk_lineitem_orderkey` arrangement of data, saving ourselves a substantial number of records.
@@ -336,10 +337,10 @@ Fortunately, there is a neat trick to get around the pesky intermediate results.
 ### Joins in Materialize: Delta Queries
 
 Let's go a bit crazy and create all of the secondary indexes we might want.
-For each column that is a primary key of another collection, we'll build an index using that column.
+For any columns that are a primary key of another collection, what is called a [foreign key](https://en.wikipedia.org/wiki/Foreign_key), we'll build an index using that column.
 Repeating the `fk_lineitem_orderkey` from above, these would be:
 
-```
+```text
 materialize=> CREATE INDEX fk_lineitem_orderkey ON lineitem (l_orderkey);
 materialize=> CREATE INDEX fk_lineitem_partkey ON lineitem (l_partkey);
 materialize=> CREATE INDEX fk_lineitem_suppkey ON lineitem (l_suppkey);
@@ -356,7 +357,7 @@ That's a bunch of indexes.
 It absolutely represents a significant increase in the fixed costs for working with this dataset.
 But, let's see what happens when we re-build `query_03`, and re-pull its record counts.
 
-```
+```text
       id  |                         name                          |   sum
     ------+-------------------------------------------------------+---------
      1284 | Dataflow: materialize.public.pk_lineitem              | 6001215
@@ -469,7 +470,7 @@ GROUP BY
 What happens now in join planning is that "delta query" planning still kicks in.
 We have all of the necessary arrangements at hand to avoid maintaining intermediate state.
 The difference is that we only ever use one arrangement for each of the "wide" relations.
-The relations that must be multiply arranged are narrow relations whose rows can be substanially smaller.
+The relations that must be multiply arranged are narrow relations whose rows can be substantially smaller.
 
 We've still got some work to do on this pattern, in particular automating it so that you needn't rewrite your query.
 However, I hope it has hinted at the ways in which Materialize can adapt efficient idioms from traditional databases to the data-parallel streaming setting.
@@ -499,9 +500,13 @@ Scanning across the 22 TPC-H queries, the numbers of records each query needs to
 | query 17 |  9,040,911 |  9,040,728 |      5,655 |
 | query 18 | 30,718,530 | 29,068,530 | 11,767,218 |
 | query 19 |    414,011 |    214,011 |         17 |
-| query 20 |        DNF |        DNF |        DNF |
+| query 20 |       DNF* |       DNF* |       DNF* |
 | query 21 | 15,367,567 | 20,091,971 |    884,845 |
 | query 22 |    279,478 |    230,658 |    158,636 |
+
+*: Query 20 has a doubly nested correlated subquery, and we currently decorrelated this less well than we could.
+The query does complete after 11 minutes or so, but it runs much more efficiently once manually decorrelated.
+Query 18 also improves greatly with manual decorrelation, but as it ran to completion I just recorded the number.
 
 Joins are a pretty interesting beast in Materialize.
 
