--- a/posts/2020-11-18.md
+++ b/posts/2020-11-18.md
@@ -1,5 +1,7 @@
 # Joins in Materialize
 
+This post is also available at the [Materialize blog](https://materialize.com/joins-in-materialize/).
+
 Materialize allows you to maintain declarative, relational SQL queries over continually changing data.
 One of the most powerful features of SQL queries are *joins*: the ability to correlate records from multiple collections of data.
 Joins also happen to be one of the harder things to do both correctly and efficiently as the underlying data change.
@@ -417,7 +419,7 @@ These few columns can take substantially less space than the whole collection, a
 Can we do the same thing in Materialize? Yes!
 
 If we are brave enough to rewrite our query just a little bit, we can write the same join in a way that does not require multiple arrangements of `lineitem`.
-The trick will be to define and use a few views that pair foreign and primary keys, and build mulitple indexes only on them.
+The trick will be to define and use a few views that pair foreign and primary keys, and build multiple indexes only on them.
 
 In our case, we only use foreign keys from `orders` and `lineitem`, and so we'll just build those views and indexes.
 More generally, you would build one of these triplets for each foreign key in a collection, mapping it back to a primary key.
