--- a/posts/2020-12-29.md
+++ b/posts/2020-12-29.md
@@ -346,6 +346,12 @@ I wrote all the views down just to make sure that they worked.
 It took a fair bit of unhelpful-reading SQL to do.
 But, I wanted to make sure you had access to them to reproduce this, if you wanted!
 
+There are three classes of things to do:
+
+1. [Convert input query intervals to those of minutes, hours, and days](),
+2. [Group and aggregate data by minutes, hours, and days](),
+3. [Join input query intervals with aggregated data, with a final aggregation]().
+
 ### Converting query intervals to minutes, hours, and days
 
 We asked the user to provide pre-sliced intervals.
@@ -354,15 +360,14 @@ Surely we can do that for them?
 
 Indeed we can, but my version is pretty terrible to read. Perhaps it can be improved.
 
-So, let's imagine now that we just have a relation with `(key, time1, time2)` triples, and no requirement that they be aligned to hours, minutes, or seconds.
-We need to peel out some seconds near `time1`, then some minutes, then some hours, then some minutes, and then some seconds ending at `time2`.
+Let's imagine that we have a relation `queries` with `(key, time1, time2)` triples, and no requirement that they be aligned to days, hours, minutes.
+We need to peel out some minutes near `time1`, then some hours, then some days, then some hours, and then some minutes ending at `time2`.
 
 The logic to do this isn't impossible, just wordy.
-Here's what I wrote for the "seconds near `time1`":
+Here's what I wrote for the "minutes near `time1`":
 ```sql
--- Try each of the 60 seconds near `time1`;
--- accept if it describes an interval beyond `time1`,
--- and not beyond `time2`.
+-- Try out each of the 60 minutes near `time1`;
+-- accept those that lie entirely between `time1` and `time2`.
 CREATE VIEW minutes1 AS
 SELECT
     key,
@@ -376,11 +381,11 @@ WHERE
     queries.time1 <= date_trunc('hour', queries.time1) + x * INTERVAL '1 minute' AND
     queries.time2 >= date_trunc('hour', queries.time1) + (x + 1) * INTERVAL '1 minute';
 ```
-In case you read SQL as well as I do, what's going on here is that we pull out the hour of `time1`, and try out the 60 one minute intervals after it.
+In case you read SQL as well as I do, what's going on here is that we pull out the hour of `time1`, and try out the 60 one-minute intervals after it.
 Each interval is kept only if it starts after `time1`, and ends before `time2`.
 
-It's actually not that complicated, computationally (it is a `flat_map` in Materialize).
-The logic generalizes to hours, days, etc., and can be used on the way back down if you round from `time2`.
+It's actually not that complicated, computationally (it is a `flat_map` in Materialize, which maintains no state).
+The logic generalizes to hours, days, etc., and can be used on the way back down if you round from `time2` instead of `time1`.
 
 You'll then need to take all of these intervals and union them together
 ```sql
@@ -395,6 +400,79 @@ SELECT * FROM time2_minutes;
 You'll notice I've invented `days` here.
 I'll leave that as homework for you.
 It's also worth stressing that I used `UNION` rather than `UNION ALL`.
-There can be repetition if e.g. `time1` and `time2` are within the same day (or hour).
+There can be repetition of these intervals if e.g. `time1` and `time2` are within the same day (or hour).
 
-### Aggregating input each minute, hour, and day
+### Grouping and aggregate data by minute, hour, and day
+
+The input data need to be grouped into intervals by minute, hour, and day.
+
+I did that by first dropping each record in each of the types of interval.
+For example, here are the daily intervals.
+Notice that there is no aggregation yet.
+```SQL
+-- Drop the data into multiple windows
+CREATE VIEW daily_intervals AS
+SELECT
+    passenger_count,
+    date_trunc('day', dropoff) as time1,
+    date_trunc('day', dropoff) + INTERVAL '1 day' as time2,
+    fare_amount
+FROM
+    tripdata;
+```
+We can do the same thing for hours and minutes.
+Once we've produce those views too, we can aggregate them up.
+
+```SQL
+-- Union contributions to each interval, and aggregate.
+CREATE VIEW all_intervals AS
+SELECT
+    passenger_count,
+    time1,
+    time2,
+    MIN(fare_amount) as min_fare_amount,
+    MAX(fare_amount) as max_fare_amount
+FROM (
+    SELECT * FROM daily_aggregates UNION ALL
+    SELECT * FROM hourly_aggregates UNION ALL
+    SELECT * FROM minutely_aggregates
+)
+GROUP BY
+    passenger_count,
+    time1,
+    time2;
+```
+I've used `UNION ALL` here because it is more efficient than `UNION`, and no records will be duplicated across the inputs because the intervals have different widths.
+
+Finally, I knew that I wanted access to this information by `(time1, time2)`.
+I intentionally left the input views unmaterialized until this point, and only now create an appropriate index.
+This is the point at which your computer will start chugging away, reading data and splitting it off into various intervals and aggregates.
+```SQL
+-- Index `all_intervals` by `(time1, time2)`.
+CREATE INDEX all_by_intervals ON all_intervals (time1, time2);
+```
+
+### Join queries and input data, and reduce
+
+Finally, we need to join the `query_intervals` collection (of multiple aligned intervals) with the `all_intervals` collection (of input data contributions).
+This will select out those aggregations that will contribute to each of the queries.
+Finally, we need to do a finishing aggregation to reduce the partial aggregates to one value.
+
+```SQL
+-- Join queries and input data, and finish the reduction.
+CREATE MATERIALIZED VIEW results AS
+SELECT
+    key,
+    passenger_count,
+    MIN(min_fare_amount),
+    MAX(max_fare_amount)
+FROM
+    query_intervals,
+    all_intervals
+WHERE
+    query_intervals.time1 = all_intervals.time1 AND
+    query_intervals.time2 = all_intervals.time2
+GROUP BY
+    key,
+    passenger_count;
+```
