--- a/posts/2020-12-29.md
+++ b/posts/2020-12-29.md
@@ -340,6 +340,21 @@ There was no perceptible amount of time between insertion and reporting the new 
 This makes sense, as we just had to track down tens of records and accumulate them.
 We didn't even have to build a new dataflow, as the `results` materialized view is already up and running.
 
+Should the underlying `tripdata` collection change, each of the registered queries will have updates pushed at them.
+In this case, the input data come pre-sliced by time.
+
+## Thoughtful comments
+
+We've seen a fairly reproducible pattern for slicing out intervals of time from aggregations.
+Our example used relatively few keys, and only did minimum and maximum aggregations.
+However, it should be clear-ish that the approach generalizes, to more keys and other aggregations.
+
+What I like about this example is that we've implemented, using SQL, a reactive computation with interesting performance properties.
+We used our knowledge and understanding of computer science, and were able to do something better as a result.
+While it can be great to blast out the first SQL that you can think of, Materialize responds well to more precise direction.
+
+If you'd like to take this example out for a spin, go and [grab a copy of Materialize](https://materialize.com/download) now!
+
 ## Appendix: All the views you need to write
 
 I wrote all the views down just to make sure that they worked.
@@ -368,7 +383,7 @@ Here's what I wrote for the "minutes near `time1`":
 ```sql
 -- Try out each of the 60 minutes near `time1`;
 -- accept those that lie entirely between `time1` and `time2`.
-CREATE VIEW minutes1 AS
+CREATE VIEW time1_minutes AS
 SELECT
     key,
     date_trunc('hour', queries.time1) + x * INTERVAL '1 minute' as time1,
