--- a/posts/2020-12-29.md
+++ b/posts/2020-12-29.md
@@ -363,9 +363,9 @@ But, I wanted to make sure you had access to them to reproduce this, if you want
 
 There are three classes of things to do:
 
-1. [Convert input query intervals to those of minutes, hours, and days](converting-query-intervals-to-minutes-hours-and-days),
-2. [Group and aggregate data by minutes, hours, and days](grouping-and-aggregate-data-by-minute-hour-and-day),
-3. [Join input query intervals with aggregated data, with a final aggregation](join-queries-and-input-data-and-reduce).
+1. [Convert input query intervals to those of minutes, hours, and days](https://github.com/frankmcsherry/blog/blob/master/posts/2020-12-29.md#converting-query-intervals-to-minutes-hours-and-days),
+2. [Group and aggregate data by minutes, hours, and days](https://github.com/frankmcsherry/blog/blob/master/posts/2020-12-29.md#grouping-and-aggregate-data-by-minute-hour-and-day),
+3. [Join input query intervals with aggregated data, with a final aggregation](https://github.com/frankmcsherry/blog/blob/master/posts/2020-12-29.md#join-queries-and-input-data-and-reduce).
 
 ### Converting query intervals to minutes, hours, and days
 
