--- a/posts/2020-12-29.md
+++ b/posts/2020-12-29.md
@@ -1,5 +1,7 @@
 # Slicing up temporal aggregates with Materialize
 
+This post is also available on the [Materialize blog](https://materialize.com/slicing-up-temporal-aggregates-in-materialize/).
+
 Materialize computes and maintains SQL queries as your underlying data change.
 This makes it especially well-suited to tracking the current state of various SQL queries and aggregates!
 
